Implemented view feedback

--- a/poli-meets-ui/src/app/components/feedback/view-feedback/all-subjects/all-subjects.component.html
+++ b/poli-meets-ui/src/app/components/feedback/view-feedback/all-subjects/all-subjects.component.html
@@ -56,7 +56,7 @@
                             <mat-card-title> {{subject.name}}</mat-card-title>
 
                             <div class="redirect">
-                                <div class="clickable-content" routerLink="/feedback/me/subjects/{{subject.id}}/form">
+                                <div class="clickable-content" routerLink="/feedback/subjects/{{subject.id}}/details">
                                     <span>View subject feedback</span>
                                     <mat-icon>open_in_new</mat-icon>
                                 </div>
