Added feedback routes to navbar

--- a/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.html
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.html
@@ -1,6 +1,10 @@
 <div class="subjects-container-padding">
     <div class="subjects-container">
 
+        <mat-card class="feedback-action-card">
+            <img mat-card-image src="assets/images/feedback/feedback-bg.png">
+        </mat-card>
+
         <mat-tab-group animationDuration="1000ms">
             <mat-tab label="ACTIVE">
                 <div class="subject-cards">
