--- a/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
+++ b/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
@@ -11,7 +11,9 @@
 
             <app-button-menu buttonName="MENTORSHIP" [menuItems]="mentorshipMenuItems"></app-button-menu>
 
-            <app-button-menu buttonName="FEEDBACK" [menuItems]="feedbackMenuItems"></app-button-menu>
+            <app-button-menu buttonName="FEEDBACK" [menuItems]="feedbackMenuItems">
+
+            </app-button-menu>
 
             <a mat-button>CONTACT</a>
 
