--- a/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.scss
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.scss
@@ -6,13 +6,21 @@
   padding-top: 64px; // dimensiunea navbar-ului
 
   .subjects-container {
-    min-height: calc(100vh - 96px); // minus dimensiunea navbar-ului
+    min-height: calc(100vh - 64px); // minus dimensiunea navbar-ului
     padding: 32px 0 0 0;
     width: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .feedback-action-card {
+      margin-top: 64px;
+      width: 75%;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      margin-bottom: 32px;
+      border-width: 0px !important;
+    }
 
   }
 }
