Added part of administration page

--- a/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
+++ b/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
@@ -18,6 +18,8 @@
             <a mat-button>CONTACT</a>
 
             <a mat-button>ABOUT</a>
+
+            <a mat-button routerLink="/admin" *ngIf="isAdmin">ADMINISTRATION</a>
         </div>
 
         <div class="navbar-buttons">
