Refactor feeedback service

--- a/poli-meets-ui/src/app/components/feedback/give-feedback/form/form.component.html
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/form/form.component.html
@@ -32,31 +32,14 @@
 
             <mat-card class="field-card" >
                 <mat-card-content>
-                    <div class="field-question">
-                        Select you laboratory/seminary teaching assistant:
-                    </div>
-
-                    <mat-form-field class="select-field">
-                        <mat-label>Select</mat-label>
-                        <mat-select >
-                            <mat-option *ngFor="let ta of teachingAssistants" [value]="ta.value">
-                                {{ ta.label }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
 
                     <div class="field-question">
-                        Do you believe the content of the course is relevant to the subject?
-                        <mat-error class="required" *ngIf="form.get('gradeCourse')?.hasError('required')">*</mat-error>
+                        {{category?.gradeQuestion}}
+                        <mat-error class="required" *ngIf="form.get('grade')?.hasError('required')">*</mat-error>
                     </div>
 
-                    <mat-radio-group  formControlName="gradeCourse" class="radio-options">
-                        <div  *ngFor="let option of options">
+                    <mat-radio-group  formControlName="grade" class="radio-options">
+                        <div  *ngFor="let option of getOptions()">
                             <mat-radio-button  [value]="option.value">
                                 {{ option.label }}
                             </mat-radio-button>
@@ -68,143 +51,16 @@
             <mat-card class="field-card" >
                 <mat-card-content>
                     <div class="field-question">
-                        Please give us some more details on the relevance of the course.
+                        {{category?.feedbackTextQuestion}}
                     </div>
 
                     <mat-form-field class="textarea-field">
                         <mat-label>Write your legacy</mat-label>
-                      <textarea formControlName="feedbackCourse" cdkTextareaAutosize
+                      <textarea formControlName="feedbackText" cdkTextareaAutosize
                                 #autosize="cdkTextareaAutosize" maxlength="2000" matInput></textarea>
                     </mat-form-field>
                 </mat-card-content>
             </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Do you believe the content covered in the laboratory/seminary has helped you understand the subject?
-                        <mat-error class="required" *ngIf="form.get('gradeLaboratory')?.hasError('required')">*</mat-error>
-                    </div>
-
-                    <mat-radio-group formControlName="gradeLaboratory" class="radio-options">
-                        <div  *ngFor="let option of options">
-                            <mat-radio-button  [value]="option.value">
-                                {{ option.label }}
-                              </mat-radio-button>
-                        </div>
-                    </mat-radio-group>
-
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Please give us some more details on the relevance of the laboratory/seminary.
-                    </div>
-
-                    <mat-form-field class="textarea-field">
-                        <mat-label>Write your legacy</mat-label>
-                        <textarea formControlName="feedbackLaboratory" cdkTextareaAutosize
-                                  #autosize="cdkTextareaAutosize" maxlength="2000" matInput></textarea>
-                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Do you consider the projects/homework to be useful in understanding the subject?
-                        <mat-error class="required" *ngIf="form.get('gradeHomework')?.hasError('required')">*</mat-error>
-                    </div>
-
-                    <mat-radio-group formControlName="gradeHomework" class="radio-options">
-                        <div  *ngFor="let option of options">
-                            <mat-radio-button  [value]="option.value">
-                                {{ option.label }}
-                            </mat-radio-button>
-                        </div>
-                    </mat-radio-group>
-
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Please give us some more details on the workload during the semester for this subject.
-                    </div>
-
-                    <mat-form-field class="textarea-field">
-                        <mat-label>Write your legacy</mat-label>
-                        <textarea formControlName="feedbackDuringSemester" cdkTextareaAutosize
-                                  #autosize="cdkTextareaAutosize" maxlength="2000" matInput></textarea>
-                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Do you consider the exam accurately reflected the course material and learning objectives?
-                        <mat-error class="required" *ngIf="form.get('gradeExam')?.hasError('required')">*</mat-error>
-                    </div>
-
-                    <mat-radio-group formControlName="gradeExam" class="radio-options">
-                        <div  *ngFor="let option of options">
-                            <mat-radio-button  [value]="option.value">
-                                {{ option.label }}
-                            </mat-radio-button>
-                        </div>
-                    </mat-radio-group>
-
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Please give us some more details on how was your exam experience for this subject.
-                    </div>
-
-                    <mat-form-field class="textarea-field">
-                        <mat-label>Write your legacy</mat-label>
-                        <textarea formControlName="feedbackExam" cdkTextareaAutosize
-                                  #autosize="cdkTextareaAutosize" maxlength="2000" matInput></textarea>                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        How would you rate the overall subject difficulty?
-                        <mat-error class="required" *ngIf="form.get('gradeDifficulty')?.hasError('required')">*</mat-error>
-                    </div>
-
-                    <mat-radio-group formControlName="gradeDifficulty" class="radio-options">
-                        <div  *ngFor="let option of optionsDifficulty">
-                            <mat-radio-button  [value]="option.value">
-                                {{ option.label }}
-                            </mat-radio-button>
-                        </div>
-                    </mat-radio-group>
-
-                </mat-card-content>
-            </mat-card>
-
-            <mat-card class="field-card" >
-                <mat-card-content>
-                    <div class="field-question">
-                        Please explain the key factors of why the subject was difficult or easy.
-                    </div>
-
-                    <mat-form-field class="textarea-field">
-                        <mat-label>Write your legacy</mat-label>
-                        <textarea formControlName="feedbackDifficulty" cdkTextareaAutosize
-                                  #autosize="cdkTextareaAutosize" maxlength="2000" matInput></textarea>                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-
 
             <button (click)="openFeedbackDialog()" class="submit-button" mat-raised-button color="primary" type="submit">SUBMIT FEEDBACK</button>
         </form>
