--- a/poli-meets-ui/src/app/components/feedback/view-feedback/subject-details/subject-details.component.html
+++ b/poli-meets-ui/src/app/components/feedback/view-feedback/subject-details/subject-details.component.html
@@ -80,7 +80,7 @@
                             </div>
 
                             <div class="number-feedbacks">
-                                {{feedbackSubjectDetails.countFeedbacks}} feedbacks
+                                {{category.countFeedbacks}} feedbacks
                             </div>
 
                         </mat-card-content>
