--- a/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.html
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/subjects/subjects.component.html
@@ -6,9 +6,9 @@
         </mat-card>
 
         <mat-tab-group animationDuration="1000ms">
-            <mat-tab label="ACTIVE">
+            <mat-tab *ngFor="let category of categories" label="{{category.name}}">
                 <div class="subject-cards">
-                    <mat-card class="subject-card" *ngFor="let subject of activeSubjects">
+                    <mat-card class="subject-card" *ngFor="let subject of category.activeSubjects">
                         <mat-card-header  >
                             <mat-card-subtitle > {{getYearValue(subject.universityYear.year)}} -
                                 {{getSemesterValue(subject.semester)}} - {{subject.universityYear.series}}
@@ -23,7 +23,7 @@
                             </div>
 
                             <div class="redirect">
-                                <div class="clickable-content" routerLink="/feedback/me/subjects/{{subject.id}}/form">
+                                <div class="clickable-content" routerLink="/feedback/me/subjects/{{subject.id}}/categories/{{category.id}}/form">
                                     <span>Give feedback</span>
                                     <mat-icon>open_in_new</mat-icon>
                                 </div>
@@ -33,27 +33,8 @@
                     </mat-card>
                 </div>
             </mat-tab>
-            <mat-tab label="SUBMITTED">
-                <div class="subject-cards">
-                    <mat-card class="subject-card" *ngFor="let subject of submittedSubjects">
-                        <mat-card-header  >
-                            <mat-card-subtitle > {{getYearValue(subject.universityYear.year)}} -
-                                {{getSemesterValue(subject.semester)}} - {{subject.universityYear.series}}
-                            </mat-card-subtitle>
-                        </mat-card-header>
-
-                        <mat-card-content>
-                            <mat-card-title> {{subject.name}}</mat-card-title>
-                            <div class="section">
-                                <mat-icon>school</mat-icon>
-                                <p class="info"><span>Teacher</span><br>{{getTeacherFullName(subject.teacher)}}</p>
-                            </div>
-                        </mat-card-content>
-
-                    </mat-card>
-                </div>
-            </mat-tab>
         </mat-tab-group>
+
 
     </div>
 </div>
