--- a/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
+++ b/poli-meets-ui/src/app/components/nav/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="navbar" [ngClass]="{'transparent' : hasTransparentBackground()}" color="primary">
     <div class="navbar-container">
         <div class="logo-nav">
-            <a>
+            <a routerLink="/home">
                 <img class="logo-image" src="assets/images/logo/poli-meets-logo.png">
             </a>
         </div>
 
         <div class="navbar-links">
-            <a mat-button>HOME</a>
+            <a mat-button routerLink="/home">HOME</a>
 
             <app-button-menu buttonName="MENTORSHIP" [menuItems]="mentorshipMenuItems"></app-button-menu>
 
