--- a/poli-meets-ui/src/app/components/admin/admin.component.html
+++ b/poli-meets-ui/src/app/components/admin/admin.component.html
@@ -1,43 +1,197 @@
 <div class="admin-container-padding">
     <div class="admin-container">
+        <div class="title">
+            <span>Administration</span>
+            <button mat-flat-button color="primary" (click)="openAddDialog()">New entry</button>
+        </div>
 
-        <mat-tab-group class="tab-group" animationDuration="1000ms">
+        <mat-tab-group class="tab-group" animationDuration="1000ms" [(selectedIndex)]="selectedTabIndex">
             <mat-tab label="Faculty">
-                <table mat-table class="table-section" [dataSource]="faculties" class="mat-elevation-z8">
+                <div class="padding-tab">
 
-                    <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef> Name </th>
-                        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                    </ng-container>
+                    <div class="search">
+                        <mat-label>Search</mat-label>
+                        <mat-form-field appearance="fill">
+                            <input matInput (keyup)="filterFaculties($event)">
+                            <mat-icon matSuffix>search</mat-icon>
+                        </mat-form-field>
+                    </div>
 
-                    <ng-container matColumnDef="domain">
-                        <th mat-header-cell *matHeaderCellDef> Domain </th>
-                        <td mat-cell *matCellDef="let element"> {{element.domain}} </td>
-                    </ng-container>
+                    <table mat-table [dataSource]="faculties" matSort class="faculty">
 
-                    <ng-container matColumnDef="description">
-                        <th mat-header-cell *matHeaderCellDef> Description </th>
-                        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-                    </ng-container>
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        </ng-container>
 
+                        <ng-container matColumnDef="domain">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Domain </th>
+                            <td mat-cell *matCellDef="let element"> {{element.domain}} </td>
+                        </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumnsFaculty"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumnsFaculty;"></tr>
-                </table>
+                        <ng-container matColumnDef="description">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                        </ng-container>
 
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Actions
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="actions">
+                                    <mat-icon matTooltip="Edit entry" color="primary"
+                                        (click)="openFacultyDialog(element)">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary"
+                                        (click)="openFacultyDeleteDialog(element)">delete_outline</mat-icon>
+                                </div>
+                            </td>
+                        </ng-container>
 
-
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsFaculty"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsFaculty;"></tr>
+                    </table>
+                </div>
             </mat-tab>
-            <mat-tab label="University Year">
 
+            <mat-tab label="University Year">
+                <div class="padding-tab">
+                    <div class="search">
+                        <mat-label>Search</mat-label>
+                        <mat-form-field appearance="fill">
+                            <input matInput (keyup)="filterUniversityYears($event)">
+                            <mat-icon matSuffix>search</mat-icon>
+                        </mat-form-field>
+                    </div>
+
+                    <table mat-table [dataSource]="universityYears" matSort class="university-year">
+
+                        <ng-container matColumnDef="facultyName">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Faculty </th>
+                            <td mat-cell *matCellDef="let element">{{element.facultyName}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="yearValue">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Year </th>
+                            <td mat-cell *matCellDef="let element"> {{element.yearValue}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="series">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cohort </th>
+                            <td mat-cell *matCellDef="let element"> {{element.series}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Actions
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="actions">
+                                    <mat-icon matTooltip="Edit entry" color="primary"
+                                        (click)="openUniversityYearDialog(element)">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary"
+                                        (click)="openUniversityYearDeleteDialog(element)">delete_outline</mat-icon>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsUniversityYears"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsUniversityYears;"></tr>
+                    </table>
+                </div>
             </mat-tab>
 
             <mat-tab label="University Class">
+                <div class="padding-tab">
+                    <div class="search">
+                        <mat-label>Search</mat-label>
+                        <mat-form-field appearance="fill">
+                            <input matInput (keyup)="filterUniversityClasses($event)">
+                            <mat-icon matSuffix>search</mat-icon>
+                        </mat-form-field>
+                    </div>
 
+                    <table mat-table [dataSource]="universityClasses" matSort class="university-class">
+
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="abbreviation">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Abbreviation </th>
+                            <td mat-cell *matCellDef="let element"> {{element.abbreviation}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="description">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="teacher">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Teacher </th>
+                            <td mat-cell *matCellDef="let element"> {{element.teacher.firstName}}
+                                {{element.teacher.lastName}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="universityYear">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> University Year </th>
+                            <td mat-cell *matCellDef="let element"> {{getUniversityYear(element.universityYear)}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="semester">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Semester </th>
+                            <td mat-cell *matCellDef="let element"> {{getSemester(element.semester)}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Actions
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="actions">
+                                    <mat-icon matTooltip="Edit entry" color="primary">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary">delete_outline</mat-icon>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsUniversityClasses"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsUniversityClasses;"></tr>
+                    </table>
+                </div>
             </mat-tab>
 
             <mat-tab label="Teacher">
+                <div class="padding-tab">
+                    <table mat-table [dataSource]="teachers" matSort class="teacher">
 
+                        <ng-container matColumnDef="firstName">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.firstName}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="lastName">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Actions
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="actions">
+                                    <mat-icon matTooltip="Edit entry" color="primary">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary">delete_outline</mat-icon>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsTeachers"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsTeachers;"></tr>
+                    </table>
+                </div>
             </mat-tab>
         </mat-tab-group>
 
