--- a/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.scss
@@ -7,57 +7,59 @@
     max-height: 85vh;
 }
 
-.dialog-header {
-    background-color: $primary;
-    padding: 32px 40px;
+.mentor-dialog {
+    .dialog-header {
+        background-color: $primary;
+        padding: 32px 40px;
 
-    p {
-        margin: 0;
-        color: #f5f5f5;
-        font-weight: 400;
-        font-size: small;
-        padding: 0 0 24px 0;
-    }
+        p {
+            margin: 0;
+            color: #f5f5f5;
+            font-weight: 400;
+            font-size: small;
+            padding: 0 0 24px 0;
+        }
 
-    p:first-of-type {
-        font-size: x-large;
-        font-weight: 600;
-        padding: 8px 0 16px 0;
-    }
+        p:first-of-type {
+            font-size: x-large;
+            font-weight: 600;
+            padding: 8px 0 16px 0;
+        }
 
 
-    span {
-        font-weight: 500;
-        font-size: x-small;
-        color: $warn;
-    }
-}
-
-.dialog-content {
-    padding: 24px 32px;
-
-    p {
-        margin: 0;
-        font-size: small;
-        font-weight: 400;
-        color: $font-color-light;
-    }
-
-    .mentor-info-fields {
-        display: flex;
-        flex-direction: column;
-
-        mat-label {
-            font-size: smaller;
+        span {
             font-weight: 500;
-            color: $font-color-light;
-            padding: 8px;
-            line-height: normal;
+            font-size: x-small;
+            color: $warn;
+        }
+    }
 
-            span {
+    .dialog-content {
+        padding: 24px 32px;
+
+        p {
+            margin: 0;
+            font-size: small;
+            font-weight: 400;
+            color: $font-color-light;
+        }
+
+        .mentor-info-fields {
+            display: flex;
+            flex-direction: column;
+
+            mat-label {
+                font-size: smaller;
                 font-weight: 500;
-                font-size: x-small;
-                color: $warn;
+                color: $font-color-light;
+                padding: 8px;
+                line-height: normal;
+
+                span {
+                    font-weight: 500;
+                    font-size: x-small;
+                    color: $warn;
+                }
             }
         }
     }
