--- a/poli-meets-ui/src/app/components/feedback/view-feedback/subject-details/subject-details.component.scss
+++ b/poli-meets-ui/src/app/components/feedback/view-feedback/subject-details/subject-details.component.scss
@@ -158,11 +158,26 @@
 }
 
 .specific-rating-card {
-  min-width: 25%;
+  height: 40%;
+  width: 25%;
   margin: 48px 64px 64px 48px;
   border-radius: 32px 32px 32px 32px !important;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
 
+}
+
+.upper-text {
+  font-size: large;
+  margin: 0px 16px 16px;
+  font-family: "Montserrat";
+}
+
+.question-text {
+  display: flex;
+  justify-content: center;
+  font-size: 17px;
+  margin: 16px;
+  font-family: "Montserrat";
 }
 
 .specific-rating-card-content {
@@ -183,6 +198,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
 }
 
 .stars-section-breakdown {
@@ -278,7 +294,7 @@
 }
 
 .comment-card-text {
-  width: 70%;
+  width: 80%;
   margin: 32px 32px 32px 12px;
   border-radius: 32px 32px 32px 32px !important;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
@@ -288,6 +304,7 @@
   .comment-text {
     font-family: "Montserrat";
     margin-left: 32px;
+    margin-right: 16px;
   }
 
 }
