--- a/poli-meets-ui/src/app/components/admin/admin.component.html
+++ b/poli-meets-ui/src/app/components/admin/admin.component.html
@@ -193,6 +193,47 @@
                     </table>
                 </div>
             </mat-tab>
+
+            <mat-tab label="Feedback Categories">
+                <div class="padding-tab">
+                    <table mat-table [dataSource]="categories" matSort class="category">
+
+                        <ng-container matColumnDef="categoryName">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Category Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="gradeQuestion">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Grade Question </th>
+                            <td mat-cell *matCellDef="let element"> {{element.gradeQuestion}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="textQuestion">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Text Question </th>
+                            <td mat-cell *matCellDef="let element"> {{element.feedbackTextQuestion}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Actions
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="actions">
+                                    <div class="actions">
+                                        <mat-icon matTooltip="Edit entry" color="primary"
+                                                  (click)="openCategoryDialog(element)">edit</mat-icon>
+                                        <mat-icon matTooltip="Delete entry" color="primary"
+                                                  (click)="openCategoryDeleteDialog(element)">delete_outline</mat-icon>
+                                    </div>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsCategories"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsCategories;"></tr>
+                    </table>
+                </div>
+            </mat-tab>
         </mat-tab-group>
 
     </div>
