--- a/poli-meets-ui/src/app/components/admin/admin.component.scss
+++ b/poli-meets-ui/src/app/components/admin/admin.component.scss
@@ -157,6 +157,18 @@
         font-family: 'Roboto';
         color: rgba(0, 0, 0, 0.6) !important;
       }
+
+      .category th:not(:last-child) {
+        width: 30%;
+      }
+
+      .category th:last-child {
+        width: 10%;
+        font-size: 13px;
+        font-weight: 500;
+        font-family: 'Roboto';
+        color: rgba(0, 0, 0, 0.6) !important;
+      }
     }
 
     .mat-column-actions {
